fixed paragraph spacing

--- a/theme/css/general.css
+++ b/theme/css/general.css
@@ -106,7 +106,10 @@ h6:target::before {
     margin-inline-end: auto;
     max-width: var(--content-max-width);
 }
-.content p { line-height: 1.45em; }
+.content p {
+    line-height: 1.40em;
+    margin-bottom: -1em;
+}
 .content ol { line-height: 1.45em; }
 .content ul { line-height: 1.45em; }
 .content a { text-decoration: none; }
